Fixed Title on Mobile

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ h2 {
 
 /* Hero Section */
 .hero-section {
-    height: 30vh;
     background-size: cover;
     position: relative;
 }
